Re-enable packaging via jpackage